--- a/src/Pages/Dashboard/AddService/AddService.css
+++ b/src/Pages/Dashboard/AddService/AddService.css
@@ -15,3 +15,10 @@
   background: #fd7709 !important;
   border-radius: 0.25rem;
 }
+
+@media only screen and (max-width: 668px) {
+  .form-main {
+    width: 100%;
+    margin-left: 11px;
+  }
+}
