--- a/src/Pages/Dashboard/Sidebar/Sidebar.css
+++ b/src/Pages/Dashboard/Sidebar/Sidebar.css
@@ -1,12 +1,32 @@
-.sidebar{
-    min-height: 92vh;
+.sidebar {
+  min-height: 92vh;
 }
-.sidebar ul li ,a{
-    list-style: none;
-    text-decoration: none;
-    margin-top: 10px;
-    font-size:18px;
-    color: #2b2b2b;
-    font-weight: 600;
-    text-align: justify;
+.sidebar ul li,
+a {
+  list-style: none;
+  text-decoration: none;
+  margin-top: 10px;
+  font-size: 19px;
+  color: #2b2b2b;
+  font-weight: 600;
+  text-align: justify;
+  letter-spacing:1px;
+  transition:0.3s;
+}
+.sidebar ul li ,a:hover{
+    color: #f63e7b;
+}
+.sidebar ul li,
+fas {
+  color: #f63e7b !important;
+  font-weight: 700 !important;
+}
+@media only screen and (max-width: 668px) {
+    .sidebar {
+        padding: 5px;
+        min-height: 45vh !important;
+      }
+      .back-btn{
+          margin-top: auto !important;
+      }
 }
